<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFitnessApplication</string>
    <string name="hello_world">Cancion: </string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_cronometro">Cronometro</string>
    <string name="title_activity_medicion">Medicion</string>
    <string name="title_activity_resumen">Resumen</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="duracion_tag">Duracion: </string>
    <string name="deporte_tag">Deporte: </string>
    <string name="fecha_tag">Fecha: </string>
    <string name="calorias_tag">Calorias: </string>
    <string name="facebook_app_id">409671882516646"</string>
    <string name="title_facebook_login">myFacebookLogin</string>
    <string name="que_deporte_deseas">¿Qué deporte deseas hacer?</string>
    <string name="siguientes_diez">10 siguientes</string>
    <string name="anteriores_diez">10 anteriores</string>
    <string name="peso_tag">Peso:</string>
    <string name="general">Resumen</string>
    <string name="tiempo">Tiempo de ejercicio</string>
    <string name="calorias_quemadas">Calorias Quemadas</string>
    <string name="altura_tag">Altura:</string>
    <string name="buscar_videos">Buscar Videos</string>
    <string name="guardar_but_tag">Guardar</string>
    <string name="minutos"> minutos</string>

    <string name="title_activity_lista_videos">Lista de videos</string>
    <string name="title_activity_player">Player</string>

   <string name="action_settings">Settings</string>   
   <string name="inital_Time">0 min, 0 sec</string>
   <string name="kCalo">Kcal</string>



</resources>
